# rbxsync

./: .gitignore  AGENTS.md  ASSETS-EXECPLAN.md  CLAUDE.md  COMMAND-LINE-EXECPLAN.md  COMMAND-LINE-PRD.md  CONTRIBUTING.md  Cargo.toml  EXTRACT-PLACE-EXECPLAN.md  EXTRACT-PLACE.PRD  HANDOFF.md  INSTALL.md  Makefile  PACKAGE-EXECPLAN.md  PUBLISH-EXECPLAN.md  README.md  ROADMAP-ISSUES.md  STRICT-EXECPLAN.md  TERRAIN-EXECPLAN.md
.claude/: TEAM-LEAD-PROMPT.md  rbxsync-harness.md
.claude/skills/: test-scaffold.md
benchmarks/benches/: extraction.rs  file_io.rs  sync.rs
benchmarks/src/: main.rs
benchmarks/src/benchmarks/: file_io.rs  instance_tree.rs  serialization.rs
docs/: serialization.md  testing.md
docs/.vitepress/: config.ts
docs/cli/: commands.md
docs/file-formats/: index.md  property-types.md  rbxjson.md  terrain.md
docs/getting-started/: configuration.md
plugin/: README.md
plugin/src/: Sync.luau  TerrainHandler.luau  TestLogger.luau  TestRunner.luau  Verifier.luau  init.server.luau
rbxsync-cli/: Cargo.toml
rbxsync-cli/src/: main.rs
rbxsync-cli/tests/: extract_place.rs  import_place.rs  publish_place.rs
rbxsync-core/: Cargo.toml
rbxsync-core/src/: assets.rs  extract_writer.rs  lib.rs  obfuscator.rs  path_utils.rs  place_exporter.rs  place_importer.rs  place_publisher.rs  plugin_builder.rs  rojo.rs  terrain.rs
rbxsync-core/src/types/: harness.rs  mod.rs  project.rs  properties.rs
rbxsync-mcp/src/: luau_helpers.rs  main.rs
rbxsync-mcp/src/tools/: mod.rs
rbxsync-server/src/: file_watcher.rs  harness.rs  lib.rs
rbxsync-server/tests/: harness_tests.rs
rbxsync-vscode/: package.json
rbxsync-vscode/src/commands/: connect.ts  extract.ts  trash.ts
rbxsync-vscode/src/server/: types.ts
rbxsync-vscode/src/views/: sidebarWebview.ts
testing/examples/: event-test.luau  instance-properties-test.luau  sync-test.luau
