[workspace]
resolver = "2"
members = [
    "rbxsync-core",
    "rbxsync-server",
    "rbxsync-cli",
    "rbxsync-mcp",
    "benchmarks",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "LicenseRef-Proprietary"
authors = ["RbxSync Team"]
repository = "https://github.com/Smokestack-Games/rbxsync"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# File watching
notify = "6.0"

# Compression
flate2 = "1.0"

# HTTP client (for API dump)
reqwest = { version = "0.11", features = ["json"] }

# Roblox binary/XML format (for plugin bundling)
rbx_binary = "0.7"
rbx_xml = "0.13"
rbx_dom_weak = "2.7"
rbx_types = "1.8"

# Platform utilities
dirs = "5.0"

# MCP protocol
rmcp = { version = "0.9", features = ["server", "transport-io"] }
schemars = "1.0"

# Text processing
regex = "1.10"
rand = "0.8"
