[package]
name = "rbxsync"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rbxsync"
path = "src/main.rs"

[dependencies]
rbxsync-core = { path = "../rbxsync-core" }
rbxsync-server = { path = "../rbxsync-server" }

serde = { workspace = true }
serde_json = { workspace = true }
rbx_dom_weak = { workspace = true }
rbx_binary = { workspace = true }
rbx_xml = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
notify = { workspace = true }
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"
