[package]
name = "rbxsync-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"

# Roblox binary format
rbx_binary = { workspace = true }
rbx_dom_weak = { workspace = true }
rbx_xml = { workspace = true }
rbx_types = { workspace = true }

# Platform utilities
dirs = { workspace = true }

# Text processing (for obfuscator)
regex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
